--- a/help/lojaintegrada/resgate_steam.html
+++ b/help/lojaintegrada/resgate_steam.html
@@ -1,40 +1,56 @@
-<div>
-    <span style="font-family:verdana,arial;font-size:12px;color:#000000;">
-        Você precisa acessar o steam client no seu computador e clicar em JOGOS.
-        <br>
-        <br>
-        <img src="https://www.tribol.com.br/help/steam/img01.png" alt="">
-        <br>
-        <br>		
-        Depois clicar em <i>Ativar um código de produto</i>.
-        <br>
-        <br>
-        <img src="https://www.tribol.com.br/help/steam/img02.png" alt="">
-        <br>
-        <br>
-        Na tela de <i>Ativação do produto</i> clique em AVANÇAR.
-        <br>
-        <br>
-        <img src="https://www.tribol.com.br/help/steam/img03.png" alt="">
-        <br>
-        <br>	
-        Na tela de <i>Acordo de assinatura do STEAM</i> clique em ACEITO.
-        <br>
-        <br>
-        <img src="https://www.tribol.com.br/help/steam/img04.png" alt="">
-        <br>
-        <br>	
-        Finalmente na tela a seguir informe o código do jogo e clique em AVANÇAR.
-        <br>
-        <br>
-        <img src="https://www.tribol.com.br/help/steam/img05.png" alt="">
-        <br>
-        <br>	
-        Feito isso o jogo vai começar a baixar e estará disponível em sua BIBLIOTECA.
-        <br>
-        <br>
-        <img src="https://www.tribol.com.br/help/steam/img06.png" alt="">
-        <br>
-        <br>	
-</span>
-</div>
+<html>
+    <head>
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-157442102-1"></script>
+        <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'UA-157442102-1');
+        </script>
+    </head>
+<body>
+    <div>
+        <span style="font-family:verdana,arial;font-size:12px;color:#000000;">
+            Você precisa acessar o steam client no seu computador e clicar em JOGOS.
+            <br>
+            <br>
+            <img src="https://www.tribol.com.br/help/steam/img01.png" alt="">
+            <br>
+            <br>		
+            Depois clicar em <i>Ativar um código de produto</i>.
+            <br>
+            <br>
+            <img src="https://www.tribol.com.br/help/steam/img02.png" alt="">
+            <br>
+            <br>
+            Na tela de <i>Ativação do produto</i> clique em AVANÇAR.
+            <br>
+            <br>
+            <img src="https://www.tribol.com.br/help/steam/img03.png" alt="">
+            <br>
+            <br>	
+            Na tela de <i>Acordo de assinatura do STEAM</i> clique em ACEITO.
+            <br>
+            <br>
+            <img src="https://www.tribol.com.br/help/steam/img04.png" alt="">
+            <br>
+            <br>	
+            Finalmente na tela a seguir informe o código do jogo e clique em AVANÇAR.
+            <br>
+            <br>
+            <img src="https://www.tribol.com.br/help/steam/img05.png" alt="">
+            <br>
+            <br>	
+            Feito isso o jogo vai começar a baixar e estará disponível em sua BIBLIOTECA.
+            <br>
+            <br>
+            <img src="https://www.tribol.com.br/help/steam/img06.png" alt="">
+            <br>
+            <br>	
+    </span>
+    </div>
+</body>
+</html>
+
