--- a/help/lojaintegrada/resgate_xbox.html
+++ b/help/lojaintegrada/resgate_xbox.html
@@ -1,33 +1,52 @@
-<div>
-    <span style="font-family:verdana,arial;font-size:12px;color:#000000;">
-    <br />
-    <br />
-    Você precisa acessar o site <a href="https://redeem.microsoft.com" target="_blank"><b>https://redeem.microsoft.com</b></a> você precisa se logar com a mesma conta usada no xbox. 
-    <br>
-    <br>
-    <img src="https://www.tribol.com.br/help/xbox/img01.png" alt="">
-    <br>
-    <br>	
-    <br>	
-    Na tela a seguir você informa o seu código de 25 dígitos e clica em AVANÇAR.
-    <br>
-    <br>
-    <img src="https://www.tribol.com.br/help/xbox/img02.png" alt="">
-    <br>
-    <br>
-    <br>
-    Será exibida uma imagem do jogo que você comprou e se concorda com os termos clica em CONFIRMAR.
-    <br>
-    <br>
-    <img src="https://www.tribol.com.br/help/xbox/img03.png" alt="">
-    <br>
-    <br>
-    <br>	
-    Depois disso você recebe uma mensagem que o jogo está pronto pra você e será instalado automaticamente no seu XBOX.
-    <br>
-    <br>
-    <img src="https://www.tribol.com.br/help/xbox/img04.png" alt="">
-    <br>
-    <br>	
-</span>
-</div>
+<html>
+    <head>
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-157442102-1"></script>
+        <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'UA-157442102-1');
+        </script>
+    </head>
+<body>
+    <div>
+        <span style="font-family:verdana,arial;font-size:12px;color:#000000;">
+        <br />
+        <br />
+        Você precisa acessar o site <a href="https://redeem.microsoft.com" target="_blank"><b>https://redeem.microsoft.com</b></a> você precisa se logar com a mesma conta usada no xbox. 
+        <br>
+        <br>
+        <img src="https://www.tribol.com.br/help/xbox/img01.png" alt="">
+        <br>
+        <br>	
+        <br>	
+        Na tela a seguir você informa o seu código de 25 dígitos e clica em AVANÇAR.
+        <br>
+        <br>
+        <img src="https://www.tribol.com.br/help/xbox/img02.png" alt="">
+        <br>
+        <br>
+        <br>
+        Será exibida uma imagem do jogo que você comprou e se concorda com os termos clica em CONFIRMAR.
+        <br>
+        <br>
+        <img src="https://www.tribol.com.br/help/xbox/img03.png" alt="">
+        <br>
+        <br>
+        <br>	
+        Depois disso você recebe uma mensagem que o jogo está pronto pra você e será instalado automaticamente no seu XBOX.
+        <br>
+        <br>
+        <img src="https://www.tribol.com.br/help/xbox/img04.png" alt="">
+        <br>
+        <br>	
+    </span>
+    </div>
+</body>
+</html>
+
+
+
+
