--- a/help/lojaintegrada/pesquisa.html
+++ b/help/lojaintegrada/pesquisa.html
@@ -1,7 +1,22 @@
-<div width="100%">
+<html>
+    <head>
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-157442102-1"></script>
+        <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'UA-157442102-1');
+        </script>
+    </head>
+<body>
+    <div width="100%">
     <span style="font-family:verdana,arial;font-size:12px;color:#000000;">
     <br />
     Responda essa breve pesquisa e ganhe um cupom de 10% de desconto na sua primeira compra na nossa loja.<br />
     <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSevW3Pz0IB238YXvQcoP6JVzgESwQig5GWtACYbH6oR3V4-4A/viewform?embedded=true" width="100%" height="800" frameborder="0" marginheight="0" marginwidth="0">Carregando…</iframe>
 </span>
 </div>
+</body>
+</html>
