--- a/steam.html
+++ b/steam.html
@@ -3,14 +3,6 @@
 
 <head>
 
-    <!-- Google Tag Manager -->
-    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-    })(window,document,'script','dataLayer','GTM-58GBR7W');</script>
-    <!-- End Google Tag Manager -->
-
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-157442102-1"></script>
     <script>
@@ -19,6 +11,8 @@
     gtag('js', new Date());
 
     gtag('config', 'UA-157442102-1');
+
+    gtag('config', 'AW-669940465');    
     </script>
 
     <meta name="description" content="A TRIBO L é uma startup online especializada em jogos digitais inicialmente para consoles XBOX ONE, XBOX 360 e PC com envio imediato dos códigos em até duas horas após confirmação de pagamento. Também somos gamers então estamos diariamente buscamos melhores produtos, serviços e preços para nosso público. Com seu apoio e confiança podemos ser a melhor loja para você encontrar jogos com preços que pode pagar. Em breve teremos mais jogos para PC, PlayStation e Nintendo.">
@@ -50,11 +44,6 @@
 </head>
 
 <body>
-
-    <!-- Google Tag Manager (noscript) -->
-    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-58GBR7W"
-    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-    <!-- End Google Tag Manager (noscript) -->
 
     <!-- Preloader Start -->
     <div id="preloader">
