--- a/help/lojaintegrada/whatsapp.html
+++ b/help/lojaintegrada/whatsapp.html
@@ -33,12 +33,13 @@
     <img src="https://www.tribol.com.br/help/qrcode.png" alt="QRCode da TRIBO L">
     <br>
     <br />
-    4) Informe o valor exato do jogo que deseja, de acordo com os preços da loja.
+    4) Informe o valor exato do jogo que deseja, de acordo com os preços que estão anúnciados em nossa loja.
     <br />
     <br />
     5) Escolha a forma de pagamento que deseja usar para a transação, lembrando que se escolher BOLETO, terá que aguardar até 2 dias úteis, o que impossibilitará o envio imediato do código do jogo para você.
     <br />
     <br />
+    6) Antes de confirmar a operação tenha certeza que está exibindo "Produto de TRIBO L"
     6) Anote o código da operação.
     <br />
     <br />
