--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                         <div class="collapse navbar-collapse" id="fancyNav">
                             <ul class="navbar-nav ml-auto">
                                 <li class="nav-item active">
-                                    <a class="nav-link" href="https://bit.ly/TriboLGames" target="_blank" alt="Clique aqui para visitar nossa loja no MercadoLivre">Loja do MercadoLivre <span class="sr-only">(current)</span></a>
+                                    <a class="nav-link" href="https://games.mercadolivre.com.br/games/_OrderId_PRICE*DESC_CustId_47243768_seller*id_47243768" target="_blank" alt="Clique aqui para visitar nossa loja no MercadoLivre">Loja do MercadoLivre <span class="sr-only">(current)</span></a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="https://loja.tribol.com.br" target="_blank">Loja Própria</a>
