--- a/help/lojaintegrada/xbox.html
+++ b/help/lojaintegrada/xbox.html
@@ -27,7 +27,8 @@
 - Para resgatar o código o serviço da Xbox Live precisa estar online, consulte antes em <a href="https://beta.support.xbox.com/xbox-live-status" target="_blank"><strong>https://beta.support.xbox.com/xbox-live-status</strong></a> ;<br />
 - Você realiza o pagamento de forma segura com MercadoPago, usando boleto ou cartão, dependendo do valor do produto o MercadoPago permite parcelamento sem juros;<br />
 - Se não sabe realizar o resgate ou tem dúvidas, fique tranquilo(a) você terá todo o apoio necessário, entre em contato via fale conosco ou via whatsapp;<br />
-- IMPORTANTE: Se optar por pagamento via boleto, será necessário até 1 dia útil para que tenhamos a confirmação de pagamento;</span><br />
+- IMPORTANTE: Se optar por pagamento via boleto, será necessário até 1 dia útil para que tenhamos a confirmação de pagamento;
+</span><br />
 <br />
 <br />
 <span style="color:#008000;">
