--- a/help/lojaintegrada/xbox.html
+++ b/help/lojaintegrada/xbox.html
@@ -13,7 +13,7 @@
 <br />
 <br />
 
-<span style="color:#008000;">
+<span style="color:#7ed957;">
 	<strong><u>INFORMAÇÕES SOBRE O ANÚNCIO</u></strong>
 </span>
 <br />
@@ -31,7 +31,7 @@
 </span><br />
 <br />
 <br />
-<span style="color:#008000;">
+<span style="color:#7ed957;">
 	<strong><u>INFORMAÇÕES SOBRE A ENTREGA DO CÓDIGO</u></strong>
 </span>
 <br />
@@ -43,7 +43,7 @@
 - O código só pode ser resgatado uma única vez, mas após resgatado você pode desinstalar e reinstalar o jogo quantas vezes quiser, será seu para sempre e intransferível;</span><br />
 <br />
 <br />
-<span style="color:#008000;">
+<span style="color:#7ed957;">
 	<strong><u>COMO RESGATAR UM CÓDIGO DE 25 DÍGITOS</strong></u>
 </span>
 <br />
@@ -55,7 +55,7 @@
 - Para maiores informações acesse: <a href="https://www.tribol.com.br/xbox.html" target="_blank"><strong>https://www.tribol.com.br/xbox.html</strong></a></span><br />
 <br />
 <br />
-<span style="color:#008000;">
+<span style="color:#7ed957;">
 	<strong><u>COMO RESGATAR UM CÓDIGO DE 25 DÍGITOS NO XBOX ONE</u></strong>
 </span>
 <br />
@@ -67,7 +67,7 @@
 - Será exibido uma imagem do jogo e se clicar em <strong>CONFIRMAR</strong> o jogo será resgatado na sua conta;</span><br />
 <br />
 <br />
-<span style="color:#008000;">
+<span style="color:#7ed957;">
 	<strong><u>POLÍTICA DE DEVOLUÇÃO E REEMBOLSO</u></strong>
 </span>
 <br />
