Remoção do cupom de desconto loja propria

--- a/index.html
+++ b/index.html
@@ -69,16 +69,13 @@
                                     <a class="nav-link" href="https://games.mercadolivre.com.br/games/_OrderId_PRICE*DESC_CustId_47243768_seller*id_47243768" target="_blank" alt="Clique aqui para visitar nossa loja no MercadoLivre">Loja do MercadoLivre <span class="sr-only">(current)</span></a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="https://loja.tribol.com.br" target="_blank">Loja Própria</a>
-                                </li>
-                                <li class="nav-item">
                                     <a class="nav-link" href="xbox.html">Como resgatar um jogo XBOX</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="steam.html">Como resgatar um jogo STEAM</a>
                                 </li>    
                                 <li class="nav-item">
-                                    <a class="nav-link" href="pesquisa.html">Cupom de desconto ?</a>
+                                    <a class="nav-link" href="pesquisa.html">Pesquisa Gamer</a>
                                 </li>                                                                                              
                             </ul>
                         </div>
@@ -101,7 +98,6 @@
                         <br>
                         <br>
                         <a href="https://bit.ly/TriboLGames" target="_blank" alt="Acesse nossa loja no MercadoLivre" class="btn fancy-btn">Loja MercadoLivre</a>
-                        <a href="https://loja.tribol.com.br" target="_blank" alt="Acesse nossa loja própria" class="btn fancy-btn">Loja Própria</a>                        
                     </div>
                 </div>
             </div>
@@ -164,26 +160,6 @@
         </div>
         <br>
         <br>
-        <div class="container">
-            <div class="row">
-
-                <div class="col-12 col-lg-6 col-xl-5 ml-xl-auto">
-                    <div class="about-us-thumb wow fadeInUp" data-wow-delay="0.5s">
-                        <img src="img/bg-img/10porcento.jpg" alt="">
-                    </div>
-                </div>
-
-                <div class="col-12 col-lg-6">
-                    <div class="about-us-text">
-                        <h2>Que tal um cupom de 10% de desconto ?</h2>
-                        <p>Quer ganhar um cupom de 10% de desconto para usar na sua próxima compra na nossa loja própria ?</p>
-                        <p>É fácil, basta responder uma breve pesquisa de mercado que estamos realizando, você nos ajuda a entender melhor o que você espera de uma loja gamer e nós te ajudamos a adquirir seu próximo jogo na nossa loja.</p>
-                        <a href="pesquisa.html" class="btn fancy-btn fancy-dark">Pesquisa Gamer</a>
-                    </div>
-                </div>
-
-            </div>
-        </div>
 
     </section>
     <!-- ***** About Us Area End ***** -->
