--- a/xbox.html
+++ b/xbox.html
@@ -77,7 +77,7 @@
                                     <a class="nav-link" href="steam.html">Como resgatar um jogo STEAM</a>
                                 </li>   
                                 <li class="nav-item">
-                                    <a class="nav-link" href="pesquisa.html">Cupom de desconto ?</a>
+                                    <a class="nav-link" href="pesquisa.html">Pesquisa Gamer</a>
                                 </li>                                                                                               
                             </ul>
                         </div>
