--- a/pesquisa.html
+++ b/pesquisa.html
@@ -97,7 +97,7 @@
             <div class="row h-100 align-items-center">
                 <div class="col-12">
                     <div class="breadcumb-content text-center">
-                        <h2>Responda essa breve pesquisa e <br>nos ajude a prestar um serviço melhor</h2>
+                        <h2>Responda essa breve pesquisa e <br>nos ajude a melhorar cada vez mais</h2>
                     </div>
                 </div>
             </div>
