--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                         <div class="collapse navbar-collapse" id="fancyNav">
                             <ul class="navbar-nav ml-auto">
                                 <li class="nav-item active">
-                                    <a class="nav-link" href="https://games.mercadolivre.com.br/games/_OrderId_PRICE*DESC_CustId_47243768_seller*id_47243768" target="_blank" alt="Clique aqui para visitar nossa loja no MercadoLivre">Loja do MercadoLivre <span class="sr-only">(current)</span></a>
+                                    <a class="nav-link" href="https://games.mercadolivre.com.br/games/_OrderId_PRICE_CustId_47243768_seller*id_47243768" target="_blank" alt="Clique aqui para visitar nossa loja no MercadoLivre">Loja do MercadoLivre <span class="sr-only">(current)</span></a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="xbox.html">Como resgatar um jogo XBOX</a>
@@ -97,7 +97,7 @@
                         <h2>Na Tribo L você encontra jogos <br>com preços que pode pagar.</h2>
                         <br>
                         <br>
-                        <a href="https://bit.ly/TriboLGames" target="_blank" alt="Acesse nossa loja no MercadoLivre" class="btn fancy-btn">Loja MercadoLivre</a>
+                        <a href="https://games.mercadolivre.com.br/games/_OrderId_PRICE_CustId_47243768_seller*id_47243768" target="_blank" alt="Acesse nossa loja no MercadoLivre" class="btn fancy-btn">Loja MercadoLivre</a>
                     </div>
                 </div>
             </div>
@@ -145,7 +145,7 @@
                 <div class="col-12 col-lg-6">
                     <div class="about-us-text">
                         <h2>O que nos move é o reflexo do trabalho na satisfação dos nossos clientes</h2>
-                        <p>Não temos vergonha de dizer que somos uma empresa começando, mas temos muito orgulho do pouco que já fizemos, e muita vontade e esperança de fazer cada vez mais pelos nossos clientes e pela comunidade gamer.</p>
+                        <p>Não temos vergonha de dizer que somos uma empresa começando formalmente, mas temos muito orgulho do pouco que já fizemos, e muita vontade e esperança de fazer cada vez mais pelos nossos clientes e pela comunidade gamer.</p>
                         <p>Veja você mesmo as recomendações que temos no MercadoLivre.</p>
                         <a href="https://www.mercadolivre.com.br/perfil/WWW.TRIBOL.COM.BR" class="btn fancy-btn fancy-dark" target="_blank">Reputação</a>
                     </div>
