Atualizacao propaganda no index.html

--- a/index.html
+++ b/index.html
@@ -160,6 +160,26 @@
         </div>
         <br>
         <br>
+        <div class="container">
+            <div class="row">
+
+                <div class="col-12 col-lg-6 col-xl-5 ml-xl-auto">
+                    <div class="about-us-thumb wow fadeInUp" data-wow-delay="0.5s">
+                        <img src="img/bg-img/lancamentos.png" alt="">
+                    </div>
+                </div>
+
+                <div class="col-12 col-lg-6">
+                    <div class="about-us-text">
+                        <h2>Uma grande variedade de jogos para Xbox One</h2>
+                        <p>Já temos mais de 180 jogos e os principais lançamentos para Xbox One, com excelentes preços e condições.</p>
+                        <p>Você realiza a compra com toda a segurança em nossa loja do MercadoLivre e pode parcelar em até 12x sem juros</p>
+                        <a href="https://games.mercadolivre.com.br/games/_OrderId_PRICE_CustId_47243768_seller*id_47243768" class="btn fancy-btn fancy-dark">Visite nossa loja</a>
+                    </div>
+                </div>
+
+            </div>
+        </div>
 
     </section>
     <!-- ***** About Us Area End ***** -->
