--- a/index.html
+++ b/index.html
@@ -173,8 +173,8 @@
                     <div class="about-us-text">
                         <h2>Uma grande variedade de jogos para Xbox One</h2>
                         <p>Já temos mais de 180 jogos e os principais lançamentos para Xbox One, com excelentes preços e condições.</p>
-                        <p>Você realiza a compra com toda a segurança em nossa loja do MercadoLivre e pode parcelar em até 12x sem juros</p>
-                        <a href="https://games.mercadolivre.com.br/games/_OrderId_PRICE_CustId_47243768_seller*id_47243768" class="btn fancy-btn fancy-dark">Visite nossa loja</a>
+                        <p>Você realiza a compra com toda a segurança em nossa loja do MercadoLivre e pode parcelar em até 12x sem juros.</p>
+                        <a href="https://games.mercadolivre.com.br/games/_OrderId_PRICE_CustId_47243768_seller*id_47243768" target="_blank" class="btn fancy-btn fancy-dark">Visite nossa loja</a>
                     </div>
                 </div>
 
