--- a/pesquisa.html
+++ b/pesquisa.html
@@ -78,7 +78,10 @@
                                 </li>   
                                 <li class="nav-item">
                                     <a class="nav-link" href="pesquisa.html">Pesquisa Gamer</a>
-                                </li>                                                                                               
+                                </li> 
+                                <li class="nav-item">
+                                    <a class="nav-link" href="newsletter.html">Newsletter</a>
+                                </li>                                                                                              
                             </ul>
                         </div>
                     </nav>
