--- a/xbox.html
+++ b/xbox.html
@@ -75,7 +75,10 @@
                                 </li>   
                                 <li class="nav-item">
                                     <a class="nav-link" href="pesquisa.html">Pesquisa Gamer</a>
-                                </li>                                                                                               
+                                </li>   
+                                <li class="nav-item">
+                                    <a class="nav-link" href="newsletter.html">Newsletter</a>
+                                </li>                                                                                              
                             </ul>
                         </div>
                     </nav>
