Revert "update jquery"
This reverts commit 97fa5e298825ad0afeec4c67feb32c2f14057e50.

--- a/steam.html
+++ b/steam.html
@@ -185,8 +185,8 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
     </footer>
     <!-- ***** Footer Area End ***** -->
 
-
-    <script src="js/jquery/jquery-3.5.1.min.js"></script>
+    <!-- jQuery-2.2.4 js -->
+    <script src="js/jquery/jquery-2.2.4.min.js"></script>
     <!-- Popper js -->
     <script src="js/bootstrap/popper.min.js"></script>
     <!-- Bootstrap-4 js -->
