--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                         <div class="collapse navbar-collapse" id="fancyNav">
                             <ul class="navbar-nav ml-auto">
                                 <li class="nav-item active">
-                                    <a class="nav-link" href="https://games.mercadolivre.com.br/games/_OrderId_PRICE_CustId_47243768_seller*id_47243768" target="_blank" alt="Clique aqui para visitar nossa loja no MercadoLivre">Loja do MercadoLivre <span class="sr-only">(current)</span></a>
+                                    <a class="nav-link" href="loja.html">Loja <span class="sr-only">(current)</span></a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="xbox.html">Como resgatar um jogo XBOX</a>
@@ -74,9 +74,6 @@
                                 <li class="nav-item">
                                     <a class="nav-link" href="steam.html">Como resgatar um jogo STEAM</a>
                                 </li>    
-                                <li class="nav-item">
-                                    <a class="nav-link" href="pesquisa.html">Pesquisa Gamer</a>
-                                </li>                                                                                              
                                 <li class="nav-item">
                                     <a class="nav-link" href="newsletter.html">Newsletter</a>
                                 </li>                                                                                              
@@ -100,7 +97,7 @@
                         <h2>Na Tribo L você encontra jogos <br>com preços que pode pagar.</h2>
                         <br>
                         <br>
-                        <a href="https://games.mercadolivre.com.br/games/_OrderId_PRICE_CustId_47243768_seller*id_47243768" target="_blank" alt="Acesse nossa loja no MercadoLivre" class="btn fancy-btn">Loja MercadoLivre</a>
+                        <a href="loja.html" target="_blank" alt="Acesse nossa loja!" class="btn fancy-btn">Loja</a>
                     </div>
                 </div>
             </div>
@@ -149,7 +146,8 @@
                     <div class="about-us-text">
                         <h2>Satisfação dos clientes é o que nos move</h2>
                         <p>Não temos vergonha de dizer que somos uma empresa começando formalmente, mas temos muito orgulho do pouco que já fizemos, muita vontade e esperança de fazer cada vez mais pelos nossos clientes e pela comunidade gamer.</p>
-                        <p>Veja você mesmo as recomendações que temos no MercadoLivre.</p>
+                        <p>Agora estamos vendendo apenas pelo nosso site, assim conseguimos preços muito melhores e atrativos!</p>
+                        <p>Mas você ainda pode consultar as recomendações que tivemos no período que atuamos no MercadoLivre.</p>
                         <a href="https://www.mercadolivre.com.br/perfil/WWW.TRIBOL.COM.BR" class="btn fancy-btn fancy-dark" target="_blank">Reputação</a>
                     </div>
                 </div>
@@ -176,8 +174,8 @@
                     <div class="about-us-text">
                         <h2>Grande Variedade de jogos digitais para Xbox One</h2>
                         <p>Já temos mais de 200 jogos digitais e os principais lançamentos para Xbox One, com excelentes preços e condições.</p>
-                        <p>Você realiza a compra com toda a segurança em nossa loja do MercadoLivre, parcelar em até 12x sem juros e recebe o código 25 dígitos para resgate em até 2 hrs.</p>
-                        <a href="https://games.mercadolivre.com.br/games/_OrderId_PRICE_CustId_47243768_seller*id_47243768" target="_blank" class="btn fancy-btn fancy-dark">Visite nossa loja</a>
+                        <p>Você realiza a compra com em nossa loja, sem burocracia, sem expor seus dados, com toda a segurança e privacidade que o pix oferece e recebe o código 25 dígitos para resgate em até 2 hrs.</p>
+                        <a href="loja.html" target="_blank" class="btn fancy-btn fancy-dark">Visite nossa loja</a>
                     </div>
                 </div>
     
