--- a/steam.html
+++ b/steam.html
@@ -67,7 +67,7 @@
                         <div class="collapse navbar-collapse" id="fancyNav">
                             <ul class="navbar-nav ml-auto">
                                 <li class="nav-item active">
-                                    <a class="nav-link" href="https://bit.ly/TriboLGames" target="_blank" alt="Clique aqui para visitar nossa loja no MercadoLivre">Loja do MercadoLivre <span class="sr-only">(current)</span></a>
+                                    <a class="nav-link" href="loja.html">Loja <span class="sr-only">(current)</span></a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="xbox.html">Como resgatar um jogo XBOX</a>
@@ -75,9 +75,6 @@
                                 <li class="nav-item">
                                     <a class="nav-link" href="steam.html">Como resgatar um jogo STEAM</a>
                                 </li> 
-                                <li class="nav-item">
-                                    <a class="nav-link" href="pesquisa.html">Pesquisa Gamer</a>
-                                </li>  
                                 <li class="nav-item">
                                     <a class="nav-link" href="newsletter.html">Newsletter</a>
                                 </li>                                                                                              
