--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                         <div class="collapse navbar-collapse" id="fancyNav">
                             <ul class="navbar-nav ml-auto">
                                 <li class="nav-item active">
-                                    <a class="nav-link" href="loja.html">Loja <span class="sr-only">(current)</span></a>
+                                    <a class="nav-link" href="loja.html">Loja</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="xbox.html">Como resgatar um jogo XBOX</a>
@@ -97,7 +97,7 @@
                         <h2>Na Tribo L você encontra jogos <br>com preços que pode pagar.</h2>
                         <br>
                         <br>
-                        <a href="loja.html" target="_blank" alt="Acesse nossa loja!" class="btn fancy-btn">Loja</a>
+                        <a href="loja.html" target="_self" alt="Acesse nossa loja!" class="btn fancy-btn">Loja</a>
                     </div>
                 </div>
             </div>
