--- a/newsletter.html
+++ b/newsletter.html
@@ -68,7 +68,7 @@
                         <div class="collapse navbar-collapse" id="fancyNav">
                             <ul class="navbar-nav ml-auto">
                                 <li class="nav-item active">
-                                    <a class="nav-link" href="loja.html">Loja <span class="sr-only">(current)</span></a>
+                                    <a class="nav-link" href="loja.html">Loja</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="xbox.html">Como resgatar um jogo XBOX</a>
@@ -77,7 +77,7 @@
                                     <a class="nav-link" href="steam.html">Como resgatar um jogo STEAM</a>
                                 </li>   
                                 <li class="nav-item">
-                                    <a class="nav-link" href="newsletter.html">Newsletter</a>
+                                    <a class="nav-link" href="newsletter.html">Newsletter <span class="sr-only">(current)</span></a>
                                 </li>                                                                                              
                             </ul>
                         </div>
