--- a/steam.html
+++ b/steam.html
@@ -67,13 +67,13 @@
                         <div class="collapse navbar-collapse" id="fancyNav">
                             <ul class="navbar-nav ml-auto">
                                 <li class="nav-item active">
-                                    <a class="nav-link" href="loja.html">Loja <span class="sr-only">(current)</span></a>
+                                    <a class="nav-link" href="loja.html">Loja</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="xbox.html">Como resgatar um jogo XBOX</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="steam.html">Como resgatar um jogo STEAM</a>
+                                    <a class="nav-link" href="steam.html">Como resgatar um jogo STEAM <span class="sr-only">(current)</span></a>
                                 </li> 
                                 <li class="nav-item">
                                     <a class="nav-link" href="newsletter.html">Newsletter</a>
