--- a/description/BR7X7MVBBQKM.html
+++ b/description/BR7X7MVBBQKM.html
@@ -1,13 +1,65 @@
 <p style="font-family: 'Poppins', sans-serif; font-size: 1rem; color:gray">
-    Far Cry 5 (Mídia Digital) Xbox One<br>
-    Publicado por :Ubisoft<br>
-    Desenvolvido por :Ubisoft Montreal<br>
-    Data de lançamento :27/03/2018<br>
-    Tamanho aproximado :46,44 GB<br>
-    Classificação etária :Para maiores de 18 anos<br>
-    Categoria :Jogos de tiros<br>
-    <br>
-    Far Cry chega aos Estados Unidos da América no jogo mais recente da franquia premiada.<br>
-    <br>
-    Hope County, Montana, foi tomada por um culto apocalíptico fanático – O Projeto em Eden’s Gate. Após sua chegada, você deve acender os fogos da resistência para liberar a comunidade. Atice as chamas da resistência e lute para livrar Hope County das mãos de um culto mortal. Cuidado com a ira de Joseph Seed e os seguidores do seu culto enquanto você ajuda a resistência no interior da América. Explore Hope County e descubra o interior de Montana, sua vida selvagem e seus habitantes nesse mundo aberto emocionante. Jogue do seu jeito. Construa seu personagem, faça seus próprios aliados e veja como o mundo muda enquanto você progride.<br>
+<iframe width="460" height="215" src="https://www.youtube.com/embed/kd7VJjtoRZI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<br><br>
+INFORMAÇÕES SOBRE O PRODUTO<br>
+===============================================<br>
+<br>
+Far Cry 5 (25 dígitos) Xbox One
+<br>Publicado por : Ubisoft
+<br>Desenvolvido por : Ubisoft Montreal
+<br>Data de lançamento : 27/03/2018
+<br>Classificação etária : Para maiores de 18 anos
+<br>Categoria : Jogos de tiros
+<br>Recursos: Multijogador online  (2-12), Cooperação online  (2), HDR10, 4K Ultra HD, Xbox One X Aprimorado
+
+<br>Far Cry chega aos Estados Unidos da América no jogo mais recente da franquia premiada.
+
+Hope County, Montana, foi tomada por um culto apocalíptico fanático – O Projeto em Eden’s Gate. Apos sua chegada, você deve acender os fogos da resistência para liberar a comunidade. Atice as chamas da resistência e lute para livrar Hope County das mãos de um culto mortal. Cuidado com a ira de Joseph Seed e os seguidores do seu culto enquanto você ajuda a resistência no interior da América. Explore Hope County e descubra o interior de Montana, sua vida selvagem e seus habitantes nesse mundo aberto emocionante. Jogue do seu jeito. Construa seu personagem, faça seus proprios aliados e veja como o mundo muda enquanto você progride.<br>
+<br>
+Fonte: Microsoft<br>
+<br>
+<br>
+INFORMAÇÕES SOBRE O ANÚNCIO<br>
+===============================================<br>
+<br>
+- É um código de 25 dígitos único, exclusivo, nunca utilizado, que vai lhe dá o direito de resgatar o Jogo via Download;<br>
+- Após o resgate você pode instalar/desinstalar/reinstalar/jogar quantas vezes quiser e quando quiser;<br>
+- É um produto digital não é um disco físico, ou seja, não existe envio por correios;<br>
+- Quando finalizar o pagamento entre em contato via whatsapp com informações para confirmação do pagamento e recebimento do código do seu jogo;<br>
+- Após resgatar o Jogo ele fica registrado permanentemente em sua conta, não poderá ser transferido para outra pessoa;<br>
+- É preciso ter uma conta microsoft previamente criada e internet para fazer o resgate e download do Jogo;<br>
+- O Serviço da Xbox Live precisa estar ativo no momento do resgate, consulte antes;<br>
+- Jogos que tem multiplayer online você vai precisar ter assinatura Xbox Live Gold para jogar e isso é vendido separadamente;<br>
+- Jogos que não possuem multiplayer você vai poder jogar conectado ou desconectado da internet, sem se preocupar com banimento;<br>
+- Qualquer dúvida ou dificuldade nós forneceremos TODO o suporte necessário, nós ligamos pra você se você achar necessário;<br>
+<br>
+<br>
+COMO RESGATAR UM CÓDIGO DE 25 DÍGITOS PELO NAVEGADOR<br>
+===============================================<br>
+<br>
+- Acesse o site de resgate de jogos da microsoft logado com a conta microsoft que deseja resgatar o Jogo;<br>
+- Digite o código de 25 dígitos no campo solicitado e clique em AVANÇAR;<br>
+- Será exibido uma imagem do Jogo e clicando em CONFIRMAR o Jogo é resgatado na sua conta;<br>
+<br>
+<br>
+COMO RESGATAR UM CÓDIGO DE 25 DÍGITOS NO VIDEOGAME<br>
+===============================================<br>
+<br>
+- Acesse o videogame usando a conta microsoft que deseja resgatar o Jogo;<br>
+- Vá até STORE e clique no botão USAR UM CÓDIGO;<br>
+- Digite o código de 25 dígitos no campo solicitado e clique em AVANÇAR;<br>
+- Será exibido uma imagem do Jogo e clicando em CONFIRMAR o Jogo é resgatado na sua conta;<br>
+<br>
+<br>
+POLÍTICA DE DEVOLUÇÃO E REEMBOLSO<br>
+===============================================<br>
+<br>
+- Todos os códigos dos produtos que comercializamos são 100% digitais, originais, únicos e exclusivos. Isso nós garantimos pra você!;<br>
+- Nós não temos o poder de inutilizar o código em caso de desistência e qualquer pessoa que tenha ciência do código pode realizar o resgate do jogo;<br>
+- Por estes motivos nós não podemos realizar a devolução e nem reembolso de um produto digital;<br>
+- Antes de realizar a sua compra, nós recomendamos que tenha certeza de que o produto que esta comprando é o que realmente deseja;<br>
+- Recomendamos que antes de comprar consulte o video que disponibilizamos no anúncio, opinião de amigos ou opinião especializada;<br>
+- Realizando o pagamento via pix você concorda com todos os termos aqui descritos.<br>
+<br>
+<br>
 </p>
