deploy imagem BR7X7MVBBQKM

--- a/description/BR7X7MVBBQKM.html
+++ b/description/BR7X7MVBBQKM.html
@@ -1,5 +1,5 @@
 <p style="font-family: 'Poppins', sans-serif; font-size: 1rem; color:gray">
-<iframe width="460" height="215" src="https://www.youtube.com/embed/kd7VJjtoRZI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe width="450" height="210" src="https://www.youtube.com/embed/kd7VJjtoRZI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <br><br>
 INFORMAÇÕES SOBRE O PRODUTO<br>
 ===============================================<br>
@@ -19,9 +19,6 @@ Hope County, Montana, foi tomada por um culto apocalíptico fanático – O Proj
 Fonte: Microsoft<br>
 <br>
 <br>
-INFORMAÇÕES SOBRE O ANÚNCIO<br>
-===============================================<br>
-<br>
 - É um código de 25 dígitos único, exclusivo, nunca utilizado, que vai lhe dá o direito de resgatar o Jogo via Download;<br>
 - Após o resgate você pode instalar/desinstalar/reinstalar/jogar quantas vezes quiser e quando quiser;<br>
 - É um produto digital não é um disco físico, ou seja, não existe envio por correios;<br>
@@ -34,7 +31,7 @@ INFORMAÇÕES SOBRE O ANÚNCIO<br>
 - Qualquer dúvida ou dificuldade nós forneceremos TODO o suporte necessário, nós ligamos pra você se você achar necessário;<br>
 <br>
 <br>
-COMO RESGATAR UM CÓDIGO DE 25 DÍGITOS PELO NAVEGADOR<br>
+PARA RESGATAR O CÓDIGO DE 25 DÍGITOS PELO NAVEGADOR<br>
 ===============================================<br>
 <br>
 - Acesse o site de resgate de jogos da microsoft logado com a conta microsoft que deseja resgatar o Jogo;<br>
@@ -42,7 +39,7 @@ COMO RESGATAR UM CÓDIGO DE 25 DÍGITOS PELO NAVEGADOR<br>
 - Será exibido uma imagem do Jogo e clicando em CONFIRMAR o Jogo é resgatado na sua conta;<br>
 <br>
 <br>
-COMO RESGATAR UM CÓDIGO DE 25 DÍGITOS NO VIDEOGAME<br>
+PARA RESGATAR O CÓDIGO DE 25 DÍGITOS NO VIDEOGAME<br>
 ===============================================<br>
 <br>
 - Acesse o videogame usando a conta microsoft que deseja resgatar o Jogo;<br>
