--- a/loja.html
+++ b/loja.html
@@ -249,14 +249,14 @@
                                 </div>
                             </div>
 
-                            <div class="col" style="display: none;">
+                            <div class="col">
                                 <div class="about-us-thumb wow fadeInUp" data-wow-delay="0.5s">
                                     <center>
-                                        <input type="hidden" id="CODIGO_[CODE]" value="[CODE]">
-                                        <img src="img/produtos/[CODE].png" alt="" width="200" height="100">
-                                        <h5 id="JOGO_[CODE]">[NAME]</h5>
-                                        <h6 id="VALOR_[CODE]"><span style="color:green">[VALOR]</span></h6>
-                                        <a href="#" id="comprar" class="btn fancy-btn fancy-dark" data-toggle="modal" data-target="#myModal" onclick="confirm(CODIGO_[CODE].value,JOGO_[CODE].innerText,VALOR_[CODE].innerText)">Comprar</a>
+                                        <input type="hidden" id="CODIGO_C0G91V37489H" value="C0G91V37489H">
+                                        <img src="img/produtos/C0G91V37489H.png" alt="" width="200" height="100">
+                                        <h5 id="JOGO_C0G91V37489H">Lego Marvel Super Heroes 2 (25 dígitos) Xbox One<br></h5>
+                                        <h6 id="VALOR_C0G91V37489H"><span style="color:green">R$ 118,00</span></h6>
+                                        <a href="#" id="comprar" class="btn fancy-btn fancy-dark" data-toggle="modal" data-target="#myModal" onclick="confirm(CODIGO_C0G91V37489H.value,JOGO_C0G91V37489H.innerText,VALOR_C0G91V37489H.innerText)">Comprar</a>
                                     </center>
                                 </div>
                             </div>
