anuncio de jogo criado BZ271JBBZ9DC

--- a/loja.html
+++ b/loja.html
@@ -290,14 +290,14 @@
                                 </div>
                             </div>
 
-                            <div class="col" style="display: none;">
+                            <div class="col">
                                 <div class="about-us-thumb wow fadeInUp" data-wow-delay="0.5s">
                                     <center>
-                                        <input type="hidden" id="CODIGO_[CODE]" value="[CODE]">
-                                        <img src="img/produtos/[CODE].png" alt="" width="200" height="100">
-                                        <h5 id="JOGO_[CODE]">[NAME]</h5>
-                                        <h6 id="VALOR_[CODE]"><span style="color:green">[VALOR]</span></h6>
-                                        <a href="#" id="comprar" class="btn fancy-btn fancy-dark" data-toggle="modal" data-target="#myModal" onclick="confirm(CODIGO_[CODE].value,JOGO_[CODE].innerText,VALOR_[CODE].innerText)">Comprar</a>
+                                        <input type="hidden" id="CODIGO_BZ271JBBZ9DC" value="BZ271JBBZ9DC">
+                                        <img src="img/produtos/BZ271JBBZ9DC.png" alt="" width="200" height="100">
+                                        <h5 id="JOGO_BZ271JBBZ9DC">Resident Evil 2 Deluxe Ed. (25 dígitos) Xbox One<br></h5>
+                                        <h6 id="VALOR_BZ271JBBZ9DC"><span style="color:green">R$ 239,00</span></h6>
+                                        <a href="#" id="comprar" class="btn fancy-btn fancy-dark" data-toggle="modal" data-target="#myModal" onclick="confirm(CODIGO_BZ271JBBZ9DC.value,JOGO_BZ271JBBZ9DC.innerText,VALOR_BZ271JBBZ9DC.innerText)">Comprar</a>
                                     </center>
                                 </div>
                             </div>
