anuncio de jogo criado C4S60FPWF4XN

--- a/description/C4S60FPWF4XN.html
+++ b/description/C4S60FPWF4XN.html
@@ -1,17 +1,66 @@
 <p style="font-family: 'Poppins', sans-serif; font-size: 1rem; color:gray">
-    Rise of the Tomb Raider Aniversário De 20 Anos (Mídia Digital) Xbox One<br>
-    Publicado por :Microsoft<br>
-    Desenvolvido por :Crystal Dynamics<br>
-    Data de lançamento :11/10/2016<br>
-    Tamanho aproximado :61,03 GB<br>
-    Classificação etária :Para maiores de 16 anos<br>
-    Categoria :Ação e aventura<br>
-    <br>
-    Rise of the Tomb Raider: 20 Year Celebration inclui o aclamado Rise of the Tomb Raider, indicado para mais de 100 prêmios. Lara Croft é mais do que uma sobrevivente em sua primeira expedição como caçadora de tumbas, rumo às remotas regiões da Sibéria, em busca do segredo da imortalidade. <br>
-    <br>
-    Jogadores de Xbox One X podem escolher entre três modos visuais, incluindo 4K nativo para maior fidelidade de resolução, efeitos visuais melhorados para belíssimos aprimoramentos gráficos e alta taxa de quadros para a jogabilidade mais suave possível.<br>
-    <br>
-    Aprimoramentos técnicos adicionais para Xbox One X incluem suporte a exibição HDR, para uma representação de cores mais vibrante e precisa, suporte para áudio espacial, incluindo Dolby Atmos® para um verdadeiro áudio 3D, resolução aprimorada de texturas e suavização de bordas aprimorada para detalhes ainda mais imersivos e realistas. Aprimoramentos visuais adicionais incluem luzes volumétricas e reflexos aprimorados, folhagem aprimorada, detalhes poligonais melhorados e filtro de texturas amplificado.<br>
-    <br>
-    Rise of the Tomb Raider: 20 Year Celebration inclui o novo conteúdo adicional "Laços de Sangue", novo suporte cooperativo para o modo Endurance, opção de dificuldade "Sobrevivente Implacável" para a campanha principal, traje e arma da edição 20 Year Celebration e 5 skins clássicas para Lara. Inclui também todos os conteúdos para baixar já lançados como Baba Yaga: O Templo da Bruxa, Modo de Resistência, Escuridão Fria Despertada, 12 roupas, 7 armas e 35 cartas de expedição. Com mais de 50 horas de jogo, testa é a versão mais completa da premiada experiência.<br>
+<iframe width="440" height="210" src="https://www.youtube.com/embed/t1bX-epXbRw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<br>
+Rise of the Tomb Raider - Edição de Aniversário - Xbox One
+<br>Publicado por : Microsoft
+<br>Desenvolvido por : Crystal Dynamics
+<br>Data de lançamento : 11/10/2016
+<br>Tamanho aproximado : 9,96 GB
+<br>Classificação etária : Para maiores de 16 anos
+<br>Categoria : Ação e aventura
+<br>Recursos: Cooperação online  (2), HDR10, 4K Ultra HD, Xbox One X Aprimorado
+
+<br>Rise of the Tomb Raider: 20 Year Celebration inclui o aclamado Rise of the Tomb Raider, indicado para mais de 100 prêmios. Lara Croft é mais do que uma sobrevivente em sua primeira expedição como caçadora de tumbas, rumo às remotas regiões da Sibéria, em busca do segredo da imortalidade.  
+ 
+Jogadores de Xbox One X podem escolher entre três modos visuais, incluindo 4K nativo para maior fidelidade de resolução, efeitos visuais melhorados para belíssimos aprimoramentos gráficos e alta taxa de quadros para a jogabilidade mais suave possível. 
+ 
+Aprimoramentos técnicos adicionais para Xbox One X incluem suporte a exibição HDR, para uma representação de cores mais vibrante e precisa, suporte para áudio espacial, incluindo Dolby Atmos® para um verdadeiro áudio 3D, resolução aprimorada de texturas e suavização de bordas aprimorada para detalhes ainda mais imersivos e realistas. Aprimoramentos visuais adicionais incluem luzes volumétricas e reflexos aprimorados, folhagem aprimorada, detalhes poligonais melhorados e filtro de texturas amplificado. 
+ 
+Rise of the Tomb Raider: 20 Year Celebration inclui o novo conteúdo adicional "Laços de Sangue", novo suporte cooperativo para o modo Endurance, opção de dificuldade "Sobrevivente Implacável" para a campanha principal, traje e arma da edição 20 Year Celebration e 5 skins clássicas para Lara. Inclui também todos os conteúdos para baixar já lançados como Baba Yaga: O Templo da Bruxa, Modo de Resistência, Escuridão Fria Despertada, 12 roupas, 7 armas e 35 cartas de expedição. Com mais de 50 horas de jogo, testa é a versão mais completa da premiada experiência.<br>
+<br>
+Fonte: Microsoft<br>
+<br>
+<br>
+INFORMAÇÕES SOBRE O PRODUTO<br>
+===============================================<br>
+- É um código de 25 dígitos único, exclusivo, nunca utilizado, que vai lhe dá o direito de resgatar o Jogo via Download;<br>
+- Após o resgate você pode instalar/desinstalar/reinstalar/jogar quantas vezes quiser e quando quiser;<br>
+- É um produto digital não é um disco físico, ou seja, não existe envio por correios;<br>
+- Quando finalizar o pagamento entre em contato via whatsapp com informações para confirmação do pagamento e recebimento do código do seu jogo;<br>
+- Após resgatar o Jogo ele fica registrado permanentemente em sua conta, não poderá ser transferido para outra pessoa;<br>
+- É preciso ter uma conta microsoft previamente criada e internet para fazer o resgate e download do Jogo;<br>
+- O Serviço da Xbox Live precisa estar ativo no momento do resgate, consulte antes;<br>
+- Jogos que tem multiplayer online você vai precisar ter assinatura Xbox Live Gold para jogar e isso é vendido separadamente;<br>
+- Jogos que não possuem multiplayer você vai poder jogar conectado ou desconectado da internet, sem se preocupar com banimento;<br>
+- Qualquer dúvida ou dificuldade nós forneceremos TODO o suporte necessário, nós ligamos pra você se você achar necessário;<br>
+<br>
+<br>
+PARA RESGATAR O CÓDIGO DE 25 DÍGITOS PELO NAVEGADOR<br>
+===============================================<br>
+<br>
+- Acesse o site de resgate de jogos da microsoft logado com a conta microsoft que deseja resgatar o Jogo;<br>
+- Digite o código de 25 dígitos no campo solicitado e clique em AVANÇAR;<br>
+- Será exibido uma imagem do Jogo e clicando em CONFIRMAR o Jogo é resgatado na sua conta;<br>
+<br>
+<br>
+PARA RESGATAR O CÓDIGO DE 25 DÍGITOS NO VIDEOGAME<br>
+===============================================<br>
+<br>
+- Acesse o videogame usando a conta microsoft que deseja resgatar o Jogo;<br>
+- Vá até STORE e clique no botão USAR UM CÓDIGO;<br>
+- Digite o código de 25 dígitos no campo solicitado e clique em AVANÇAR;<br>
+- Será exibido uma imagem do Jogo e clicando em CONFIRMAR o Jogo é resgatado na sua conta;<br>
+<br>
+<br>
+POLÍTICA DE DEVOLUÇÃO E REEMBOLSO<br>
+===============================================<br>
+<br>
+- Todos os códigos dos produtos que comercializamos são 100% digitais, originais, únicos e exclusivos. Isso nós garantimos pra você!;<br>
+- Nós não temos o poder de inutilizar o código em caso de desistência e qualquer pessoa que tenha ciência do código pode realizar o resgate do jogo;<br>
+- Por estes motivos nós não podemos realizar a devolução e nem reembolso de um produto digital;<br>
+- Antes de realizar a sua compra, nós recomendamos que tenha certeza de que o produto que esta comprando é o que realmente deseja;<br>
+- Recomendamos que antes de comprar consulte o video que disponibilizamos no anúncio, opinião de amigos ou opinião especializada;<br>
+- Realizando o pagamento via pix você concorda com todos os termos aqui descritos.<br>
+<br>
+<br>
 </p>
