--- a/loja.html
+++ b/loja.html
@@ -302,14 +302,14 @@
                                 </div>
                             </div>
 
-                            <div class="col" style="display: none;">
+                            <div class="col">
                                 <div class="about-us-thumb wow fadeInUp" data-wow-delay="0.5s">
                                     <center>
-                                        <input type="hidden" id="CODIGO_[CODE]" value="[CODE]">
-                                        <img src="img/produtos/[CODE].png" alt="" width="200" height="100">
-                                        <h5 id="JOGO_[CODE]">[NAME]</h5>
-                                        <h6 id="VALOR_[CODE]"><span style="color:green">[VALOR]</span></h6>
-                                        <a href="#" id="comprar" class="btn fancy-btn fancy-dark" data-toggle="modal" data-target="#myModal" onclick="confirm(CODIGO_[CODE].value,JOGO_[CODE].innerText,VALOR_[CODE].innerText)">Comprar</a>
+                                        <input type="hidden" id="CODIGO_BVT6GR25FKCF" value="BVT6GR25FKCF">
+                                        <img src="img/produtos/BVT6GR25FKCF.png" alt="" width="200" height="100">
+                                        <h5 id="JOGO_BVT6GR25FKCF">Watch Dogs 1 & 2 Bundle (25 dígitos) Xbox One<br></h5>
+                                        <h6 id="VALOR_BVT6GR25FKCF"><span style="color:green">R$ 276,00</span></h6>
+                                        <a href="#" id="comprar" class="btn fancy-btn fancy-dark" data-toggle="modal" data-target="#myModal" onclick="confirm(CODIGO_BVT6GR25FKCF.value,JOGO_BVT6GR25FKCF.innerText,VALOR_BVT6GR25FKCF.innerText)">Comprar</a>
                                     </center>
                                 </div>
                             </div>
