--- a/loja.html
+++ b/loja.html
@@ -316,6 +316,47 @@
 
                         </div>
                         <br><br>
+                        <!-- LISTA DOS JOGOS -->
+                        <div class="row">
+
+                            <div class="col">
+                                <div class="about-us-thumb wow fadeInUp" data-wow-delay="0.5s">
+                                    <center>
+                                        <input type="hidden" id="CODIGO_BSXLFN5QQZSC" value="BSXLFN5QQZSC">
+                                        <img src="img/produtos/BSXLFN5QQZSC.png" alt="" width="200" height="100">
+                                        <h5 id="JOGO_BSXLFN5QQZSC">Watch Dogs2 (25 dígitos) Xbox One<br></h5>
+                                        <h6 id="VALOR_BSXLFN5QQZSC"><span style="color:green">R$ 219,00</span></h6>
+                                        <a href="#" id="comprar" class="btn fancy-btn fancy-dark" data-toggle="modal" data-target="#myModal" onclick="confirm(CODIGO_BSXLFN5QQZSC.value,JOGO_BSXLFN5QQZSC.innerText,VALOR_BSXLFN5QQZSC.innerText)">Comprar</a>
+                                    </center>
+                                </div>
+                            </div>
+
+                            <div class="col" style="display: none;">
+                                <div class="about-us-thumb wow fadeInUp" data-wow-delay="0.5s">
+                                    <center>
+                                        <input type="hidden" id="CODIGO_[CODE]" value="[CODE]">
+                                        <img src="img/produtos/[CODE].png" alt="" width="200" height="100">
+                                        <h5 id="JOGO_[CODE]">[NAME]</h5>
+                                        <h6 id="VALOR_[CODE]"><span style="color:green">[VALOR]</span></h6>
+                                        <a href="#" id="comprar" class="btn fancy-btn fancy-dark" data-toggle="modal" data-target="#myModal" onclick="confirm(CODIGO_[CODE].value,JOGO_[CODE].innerText,VALOR_[CODE].innerText)">Comprar</a>
+                                    </center>
+                                </div>
+                            </div>
+
+                            <div class="col" style="display: none;">
+                                <div class="about-us-thumb wow fadeInUp" data-wow-delay="0.5s">
+                                    <center>
+                                        <input type="hidden" id="CODIGO_[CODE]" value="[CODE]">
+                                        <img src="img/produtos/[CODE].png" alt="" width="200" height="100">
+                                        <h5 id="JOGO_[CODE]">[NAME]</h5>
+                                        <h6 id="VALOR_[CODE]"><span style="color:green">[VALOR]</span></h6>
+                                        <a href="#" id="comprar" class="btn fancy-btn fancy-dark" data-toggle="modal" data-target="#myModal" onclick="confirm(CODIGO_[CODE].value,JOGO_[CODE].innerText,VALOR_[CODE].innerText)">Comprar</a>
+                                    </center>
+                                </div>
+                            </div>
+
+                        </div>
+                        <br><br>
                         <!--NOVA_LINHA-->
 
 
